testsuite/escript/errors/errors002-var-same-name-as-function.err2
errors002-var-same-name-as-function.src:4:9: error: Cannot define a variable with the same name as function 'print'
